Keep track of current state in URL.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^7.14.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5"
   },
